--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <title>芯知｜挑战杯本科科技发明类项目</title>
+  <meta charset="UTF-8">
+  <title>芯知｜电芯研发与知识产权合规系统</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-        "PingFang SC", "Microsoft YaHei", Helvetica, Arial, sans-serif;
-      background: linear-gradient(180deg, #f8fafc, #eef2ff);
       margin: 0;
+      font-family: "PingFang SC","Microsoft YaHei",sans-serif;
+      background: linear-gradient(135deg,#eef2ff,#f8fafc);
       color: #1f2937;
     }
     header {
-      background: #ffffff;
-      padding: 24px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
-    }
-    main {
-      max-width: 900px;
-      margin: 40px auto;
-      background: #ffffff;
-      border-radius: 16px;
       padding: 40px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      text-align: center;
     }
-    h1 { margin-top: 0; }
-    h2 { margin-top: 40px; }
-    .tag {
+    h1 {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+    h2 {
+      font-weight: normal;
+      color: #475569;
+    }
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      padding: 40px;
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+      gap: 20px;
+      margin-top: 40px;
+    }
+    .card {
+      background: white;
+      padding: 24px;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    }
+    .card h3 {
+      margin-top: 0;
+    }
+    .btn {
       display: inline-block;
-      background: #eef2ff;
-      color: #4338ca;
-      padding: 6px 12px;
-      border-radius: 999px;
-      font-size: 14px;
-      margin-bottom: 16px;
+      margin-top: 40px;
+      padding: 16px 32px;
+      font-size: 18px;
+      background: #4f46e5;
+      color: white;
+      border-radius: 12px;
+      text-decoration: none;
     }
     footer {
       text-align: center;
@@ -47,51 +64,43 @@
 <body>
 
 <header>
-  <strong>芯知</strong> ｜ 电池新国标合规与专利风险智能辅助系统
+  <h1>芯知</h1>
+  <h2>电芯研发与知识产权合规智能辅助系统</h2>
 </header>
 
-<main>
-  <div class="tag">挑战杯 · 本科 · 科技发明类</div>
-
-  <h1>芯知：面向 GB 38031-2025 的电池研发前端合规辅助系统</h1>
-
+<div class="container">
   <p>
-    随着新能源电池产业快速发展，<strong>GB 38031-2025 新国标</strong>
-    对动力电池安全性与一致性提出了更高要求。
-    然而在高校实验室与学生创新团队中，普遍存在对标准条款理解不足、
-    对专利边界认知模糊的问题，导致科研方案“可实现但不可转化”。
+    芯知是一套面向新能源电芯研发过程的智能辅助系统，  
+    聚焦 <strong>新国标合规分析</strong> 与 <strong>知识产权风险识别</strong>，
+    帮助研发人员在方案阶段降低合规与侵权风险。
   </p >
 
-  <h2>一、项目创新点</h2>
-  <ul>
-    <li>首次将电池新国标条款与专利语义理解进行统一建模分析</li>
-    <li>面向研发方案阶段的前置合规与侵权风险预警机制</li>
-    <li>构建 AI 初筛 + 专家复核的人机协同辅助模式</li>
-  </ul>
+  <div class="cards">
+    <div class="card">
+      <h3>⚙️ 电芯合规分析</h3>
+      <p>基于 GB 38031-2025 条款，对研发方案进行前置合规性评估。</p >
+    </div>
+    <div class="card">
+      <h3>📑 专利风险评估</h3>
+      <p>从技术特征层面对方案进行专利风险与侵权可能性分析。</p >
+    </div>
+    <div class="card">
+      <h3>🧠 知识增强智研</h3>
+      <p>结合标准与专利知识，对研发路径提供智能提示与解释。</p >
+    </div>
+    <div class="card">
+      <h3>🧪 示例方案验证</h3>
+      <p>通过典型电芯方案展示系统分析流程与结果形式。</p >
+    </div>
+  </div>
 
-  <h2>二、系统技术路线</h2>
-  <ul>
-    <li><b>数据层：</b>新国标条款与电池相关专利文本结构化处理</li>
-    <li><b>语义层：</b>针对材料、工艺与测试方法构建专业语义模型</li>
-    <li><b>评估层：</b>合规不符合项与潜在侵权风险识别</li>
-    <li><b>决策层：</b>输出风险等级与优化建议</li>
-  </ul>
-
-  <h2>三、示例验证</h2>
-  <p>
-    以 NCM811 正极材料方案作为示例，
-    系统可在方案设计阶段识别潜在专利相似点与国标风险项，
-    为后续实验优化提供指导。
-  </p >
-
-  <p>
-    <b>芯知</b> 为挑战杯展示用途的系统原型，
-    旨在验证技术路线与应用可行性。
-  </p >
-</main>
+  <div style="text-align:center">
+    <a class="btn" href=" ">进入系统</a >
+  </div>
+</div>
 
 <footer>
-  © 2025 芯知｜挑战杯本科科技发明类项目演示原型
+  © 芯知 XinZhi · 电芯研发智能合规系统（原型）
 </footer>
 
 </body>
