--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
 
   <div style="text-align:center">
-    <a class="btn" href=" ">进入系统</a >
+    <a class="btn" href="system.html">进入系统</a>
   </div>
 </div>
 
